# imdb-sentiment

./: .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml  serve_web.ps1
.github/workflows/: ci.yml
artifacts/models/: baseline.joblib
artifacts/reports/: metrics.json
configs/: baseline.yaml
configs/experiments/: lstm_baseline_v1.yaml  lstm_bidirectional_masked_mean_optuna_regexprep_v1.yaml  lstm_bidirectional_masked_mean_v1.yaml  lstm_bidirectional_v1.yaml  tfidf_baseline_v1.yaml  tfidf_max_features_10000.yaml  tfidf_tuned_v2_final.yaml  transformer_distilbert_v1.yaml
docs/: experiments.md
docs/experiments/: lstm_experiments.md
notebooks/: baseline_eda_imdb.ipynb  baseline_tf_idf.ipynb  bilstm+mean_polling.ipynb  evaluation.ipynb  lstm_preprocessing_audit.ipynb  tf_idf_baseline.ipynb  tf_idf_baseline_v1.ipynb  tfidf_tuned_v2_final.ipynb
notebooks/lstm/: bilstm_v1.ipynb  eda_lstm.ipynb  lstm_v1.ipynb  regex_v2_bilstm_masked_pooling.ipynb
src/imdb_sentiment/: __init__.py  cli.py  render_entry.py  settings.py  webapp.py
src/imdb_sentiment/artifacts/: __init__.py  lstm.py  lstm_runtime.py
src/imdb_sentiment/data/: dataset.py  lstm.py
tests/: test_baseline_model.py  test_cli.py  test_dataset.py  test_evaluation.py  test_inference.py  test_lstm_data.py  test_lstm_model.py  test_lstm_pipeline_contract.py  test_lstm_runtime.py  test_model_comparison.py  test_prepare_lstm_data.py  test_preprocess.py  test_render_entry.py  test_settings.py  test_train.py  test_train_lstm.py  test_webapp.py
tests/features/: test_lstm_preprocessing.py
(+21 files in other folders)
