[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imdb-sentiment"
version = "0.1.0"
description = "Sentiment analysis project for IMDb reviews"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "scikit-learn==1.6.1",
    "pandas>=2.2",
    "PyYAML>=6.0.1",
    "datasets>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
